--- a/style.css
+++ b/style.css
@@ -560,6 +560,7 @@ body {
   font-weight: 900;
   -webkit-text-stroke: 2px black;
   color: transparent;
+  background-color: yellow;
 }
 
 footer {
